# libcollections

./: .gitignore  CMakeLists.txt  README.md
docs/: coding-style.md
examples/caption/: Makefile  example.c
examples/cfg/: Makefile  cfg.c  config.ini  example.c  example.ini
examples/chat/client/: Makefile  example.c  main.c
examples/chat/server/: Makefile  example.c  main.c
examples/counter/: Makefile  example.c
examples/datetime/: Makefile  example.c
examples/glist/: Makefile  example.c
examples/image/: Makefile  example.c
examples/json/: Makefile  example.c  example.json
examples/log/: Makefile  example.c
examples/object/: Makefile  example.c
examples/plugin/c/: Makefile  example.c
examples/plugin/c++/: Makefile  example.cpp
examples/plugin/go/: Makefile  plugin.go
examples/plugin/java/: Jplugin.java  jpbuild
examples/plugin/manager/: Makefile  example.c
examples/plugin/python/: py-plugin.py
examples/plugin/rust/: Cargo.toml  build.rs
examples/plugin/rust/src/: call.c  lib.rs
examples/queue/: Makefile  example.c
examples/stack/: Makefile  example.c
examples/string/: Makefile  example.c
examples/timer/: Makefile  example.c
examples/value/: Makefile  example.c
include/: collections.h
include/api/: cfg.h  chat.h  counter.h  cqueue.h  cstack.h  datetime.h  dir.h  dll.h  error.h  event.h  file.h  hashtable.h  image.h  init.h  intl.h  io.h  json.h  list.h  log.h  mem.h  object.h  plugin.h  plugin_macros.h  process.h  queue.h  random.h  ref.h  specs.h  stack.h  string.h  stringlist.h  thread.h  timeout.h  timer.h  types.h  utils.h
include/cl/: cl_caption.h  cl_cfg.h  cl_chat.h  cl_counter.h  cl_cqueue.h  cl_cstack.h  cl_datetime.h  cl_dir.h  cl_dll.h  cl_error.h  cl_event.h  cl_file.h  cl_glist.h  cl_hashtable.h  cl_image.h  cl_init.h  cl_internal.h  cl_intl.h  cl_io.h  cl_json.h  cl_list.h  cl_log.h  cl_mem.h  cl_object.h  cl_plugin.h  cl_plugin_macros.h  cl_process.h  cl_queue.h  cl_random.h  cl_raw.h  cl_ref.h  cl_specs.h  cl_stack.h  cl_string.h  cl_stringlist.h  cl_thread.h  cl_timeout.h  cl_timer.h  cl_typeof.h  cl_types.h  (+3 more)
include/internal/: error.h  glist.h  init.h  internal.h  intl.h  plugin.h  random.h  typeof.h  utils.h  value.h
java/: Argument.java  Cplugin.java  CpluginArguments.java  CpluginData.java  CpluginEntryAPI.java  CpluginModule.java  CpluginObject.java  CpluginType.java  Makefile
misc/: libcollections.sym
pkg/collections/: arguments.go  object.go  string.go
python/: cl_plugin.py  cplugin.py
rust/rcollections/: Cargo.toml
rust/rcollections/src/: utils.rs
src/: Makefile  Makefile.python  caption.c  cfg.c  chat.c  counter.c  cqueue.c  datetime.c  dir.c  dll.c  error.c  event.c  file.c  glist.c  hashtable.c  image.c  init.c  intl.c  io.c  json.c  libcollections.sym  list.c  log.c  mem.c  object.c  plugin.c  process.c  queue.c  random.c  raw.c  ref.c  specs.c  stack.c  string.c  stringlist.c  thread.c  timeout.c  timer.c  typeof.c  util.c  (+2 more)
src/adt/: cqueue.c  cstack.c  dll.c  glist.c  hashtable.c  list.c  queue.c  stack.c
src/chat/: chat.c  chat.h  chat_misc.c  drv_raw_socket.c  ipc_tcp.c  ipc_udp.c
src/core/: error.c  event.c  init.c  intl.c  mem.c  process.c  random.c  ref.c  specs.c  thread.c  timer.c  utils.c
src/files/: cfg.c  file.c  json.c  log.c
src/go/pkg/collections/: arguments.go  cfg.go  collections.go
src/image/: caption.c  cvt.c  image.c  image.h  info.c  raw.c  utils.c
src/io/: dir.c  io.c
src/java/: CpluginEntryAPI.java  CpluginModule.java  Makefile  jni_Cplugin.c  jni_CpluginArguments.c  jni_CpluginObject.c  jni_CpluginType.c  jni_cplugin.h
src/plugin/: api_parser.c  arguments.c  call.c  dl.c  dl_c.c  dl_c.h  dl_elf.c  dl_elf.h  dl_java.c  dl_java.h  dl_python.c  dl_python.h  info.c  pl_misc.c  plugin.c  plugin.h  plugin_misc.c  rv.c  utils.c
src/plugin/java/: jni_CpluginArguments.c  jni_CpluginObject.c  jni_cplugin.h
src/python/: _cplugin.c  cl_plugin.py
src/rust/rcollections/: Cargo.toml
src/rust/rcollections/src/: arguments.rs  cfg.rs  lib.rs  object.rs  string.rs  utils.rs
src/types/: counter.c  datetime.c  object.c  string.c  stringlist.c  timeout.c  typeof.c
tests/: CMakeLists.txt  test-example.c
valgrind/: collections.supp
vim/: libcollections.vim
