[package]
name = "rust"
version = "0.1.0"
authors = ["Rodrigo Freitas"]
build = "build.rs"

[lib]
name = "rplugin"
crate-type = ["dylib"]

[dependencies]
rcollections = { path = "../../../src/rust/rcollections", version = "0.1" }
libc = "0.2.0"
#rcollections = { path = "$HOME/desenv/Personal/git/github/libcollections/src/rust/rcollections", version = "0.1" }

[build-dependencies]
cc = "1.0"
